Implementando docker listo

--- a/js_sql/docker-compose.yml
+++ b/js_sql/docker-compose.yml
@@ -1,6 +1,7 @@
-version: "3.9"
 services:
   webcontainer:
+    depends_on:
+      - my_sql
     build:
       context: ../
       dockerfile: ./js_sql/dockerfile.node
@@ -8,10 +9,15 @@ services:
       - "3000:3000"
 
   my_sql:
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 5
     ports:
       - "3307:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=123456
+
     build:
       context: .
       dockerfile: dockerfile.mysql
